Fix "doom flicker" on header

--- a/src/assets/styles/Header.scss
+++ b/src/assets/styles/Header.scss
@@ -1,76 +1,77 @@
 header {
-    position: absolute;
-    width: 100%;
+  position: absolute;
+  width: 100%;
 }
 .header-container {
-    visibility: hidden;
-    position: relative;
-    padding: 20px 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    z-index: 1;
-    @media (min-width: 768px) {
-        padding: 20px 30px;
-    }
+  visibility: hidden;
+  position: relative;
+  padding: 20px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  z-index: 1;
+  @media (min-width: 768px) {
+    padding: 20px 30px;
+  }
 }
 
 .header__logo {
-    color: var(--text-color);
-    font-size: 1.3rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    cursor: pointer;
-    font-family: 'Space Mono';
-    @media (min-width: 768px) {
-        font-size: 1.875rem;
-    }
+  color: var(--text-color);
+  font-size: 1.3rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  cursor: pointer;
+  font-family: 'Space Mono';
+  @media (min-width: 768px) {
+    font-size: 1.875rem;
+  }
 }
 
 .header__navigation {
-    width: 45%;
-    nav ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        justify-content: space-between;
-        align-items: center;
-        display: none;
-        @media (min-width: 768px) {
-            display: flex;
-        }
-        li {
-            a {
-                color: var(--text-color);
-                text-decoration: none;
-                font-size: 1rem;
-                font-weight: 600;
-                transition: all 0.3s;
-                display: inline-block;
-                padding: 8px 0;
-                will-change: transform;
-                font-family: 'Poppins';
-                &:hover {
-                    transform: translateY(-5px)
-                }
-            }
-        }
+  width: 45%;
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    justify-content: space-between;
+    align-items: center;
+    display: none;
+    @media (min-width: 768px) {
+      display: flex;
     }
+    li {
+      cursor: pointer;
+      &:hover a {
+        transform: translateY(-5px);
+      }
+      a {
+        color: var(--text-color);
+        text-decoration: none;
+        font-size: 1rem;
+        font-weight: 600;
+        transition: transform 0.3s;
+        display: inline-block;
+        padding: 8px 0;
+        will-change: transform;
+        font-family: 'Poppins';
+      }
+    }
+  }
 }
 
 .header__menu {
-    cursor: pointer;
-    @media (min-width: 768px) {
-        display: none;
-    }
-    span {
-        display: block;
-        width: 20px;
-        height: 3px;
-        background-color: var(--text-color);
-        margin: 6px 0;
-        border-radius: 20px;
-    }
+  cursor: pointer;
+  @media (min-width: 768px) {
+    display: none;
+  }
+  span {
+    display: block;
+    width: 20px;
+    height: 3px;
+    background-color: var(--text-color);
+    margin: 6px 0;
+    border-radius: 20px;
+  }
 }
